added @Only checks; still problem with delays in TestObjectFlow3